@startuml
'https://plantuml.com/class-diagram

class DatabaseService {
    init()
    addReview(Review r)
    getReviews(String companyName)
    addProduct(Product a)
    getProducts(String companyName)
    getMatchedProducts()
}
class PredictionService {
    init()
    getCategories(Review r)
}
class Product
class Review
class RequestHandler
class Tester

RequestHandler *-- DatabaseService
RequestHandler *-- PredictionService
DatabaseService -- Review
DatabaseService -- Product
DatabaseService -- Tester
PredictionService -- Review

@enduml